[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["duajaradat <duajaradat164@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
lab = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
